# smoke-tests

./: .gitattributes  .gitignore  .gitmodules  .yamllint.yaml  CODEOWNERS  README.md  composer.json  elm-package.json  go.mod  job-scenario1.yaml  job-scenario10.yaml  job-scenario11.yaml  job-scenario12.yaml  job-scenario13.yaml  job-scenario14.yaml  job-scenario15.yaml  job-scenario2.yaml  job-scenario3.yaml  job-scenario4.yaml  job-scenario5.yaml  job-scenario6.yaml  job-scenario7.yaml  job-scenario8.yaml  job-scenario9.yaml  package-lock.json
.devcontainer/: devcontainer.json  on-create.sh  post-create-command.sh  post-create.sh
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: body-moving.yml  cache-all.yml  cache-one.yml  download-cli.yml  dry-run.yml  i-am-a-smoke-test.yml  list-suites.yml  refresh-artifacts.yml  regen.yml  regenerate-test.yml  smoke-ci.yml  smoke.yml  yamllint.yml
actions/: action.yml
bazel-bzlmod/: BUILD.bazel  MODULE.bazel
bazel-workspace/: BUILD  WORKSPACE
bugs/bundler-octicon-bug/: grouped-updates-pinned.yaml  grouped-updates-vendoring.yaml  grouped-updates.yaml  single-updates-vendoring.yaml  single-updates.yaml
bundler/: Gemfile  dependabot-all-updates-test-staging.gemspec
bundler-vendored/: Gemfile
bundler/security-subdep/: Gemfile
cargo/: Cargo.toml
cargo/sparse-index/: Cargo.toml
composer/: composer.json
dependabot-test/: test.txt
devbox/: devbox.json
devcontainers/.devcontainer/: devcontainer-lock.json  devcontainer.json
dotnet-sdk/allow-prerelease/: global.json
elm/: elm.json
go/: go.mod  go.sum  gomain.go
go/gosum-reconciliation/: go.mod  go.sum  main.go
go/graphs/: README.md
go/grouped-security-update/: go.sum
go/local/: go.mod  local.go
go/workspace/: go.mod  go.sum  go.work
gradle/: build.gradle
gradle-lockfile/: gradle.properties  settings.gradle.kts
gradle-lockfile/app/: build.gradle.kts  gradle.lockfile
gradle-version-catalog/: .gitignore  build.gradle  settings.gradle
gradle-version-catalog/app/: build.gradle  libs.versions.toml
gradle-version-catalog/gradle/: google-libs.versions.toml  libs.versions.toml
gradle-wrapper/: settings.gradle
gradle-wrapper/buildSrc/: settings.gradle.kts
helm/: Chart.yaml
helm/with-bom/: values.yaml
maven-wrapper/bin-distribution/: pom.xml
maven-wrapper/only-script-includeDebug-distribution/: mvnwDebug.cmd  pom.xml
maven-wrapper/only-script-missing-wrapper-version/: mvnwDebug  mvnwDebug.cmd
mise/: mise.toml
mixed-graph/: package-lock.json  pyproject.toml
nix/: flake.nix
nix-tag/: flake.nix
nix-versioned-branch/: flake.nix
npm/: package-lock.json  package.json
npm/angular/: package-lock.json  package.json
npm/maintainer-spaces/: package-lock.json  package.json
npm/no-dependencies/: package-lock.json  package.json
npm/semver/: package-lock.json  package.json
npm/transitive/: package-lock.json  package.json
nuget/: project.csproj
nuget-dependency-resolution/scenario1/: project.csproj
nuget-dependency-resolution/scenario10/: project.csproj
nuget-dependency-resolution/scenario11/: project.csproj
nuget-dependency-resolution/scenario12/: project.csproj
nuget-dependency-resolution/scenario13/: project.csproj
nuget-dependency-resolution/scenario14/: project.csproj
nuget-dependency-resolution/scenario15/: project.csproj
nuget-dependency-resolution/scenario2/: project.csproj
nuget-dependency-resolution/scenario3/: project.csproj
nuget-dependency-resolution/scenario4/: project.csproj
nuget-dependency-resolution/scenario6/: project.csproj
nuget-dependency-resolution/scenario7/: project.csproj
nuget-dependency-resolution/scenario8/: project.csproj
nuget-dependency-resolution/scenario9/: project.csproj
nuget/binding-redirects/: WindowsFormsApp.csproj
nuget/central-package-management/: Directory.Packages.props  project.csproj
nuget/compatible-version/: compatible-version.sln
nuget/dependency-solver/: project.csproj
nuget/directory-packages-props/: Directory.Packages.props
nuget/dirs-proj/: dirs.proj
nuget/lock-file/: project.csproj
nuget/peer-dependencies/: project.csproj
nuget/potential-downgrade/: Directory.Build.props  Directory.Packages.props  project.csproj
opentofu/: main.tf
pip/: requirements.txt
pip-compile/: requirements.in  requirements.txt
pipenv/: Pipfile
pipenv-graph/: Pipfile
pnpm/: package.json  pnpm-lock.yaml
poetry/: pyproject.toml
poetry-ephemeral-graph/: pyproject.toml
poetry-graph/: pyproject.toml
pub/: pubspec.yaml
sbt/: build.sbt
script/: download-cache.sh  download-cli.sh  regen.sh  run-all.sh  run-one.sh  setup-tls.sh
swift/: Package.swift
tests/: smoke-actions.yaml  smoke-bundler-group-multidir.yaml  smoke-bundler-group-rules.yaml  smoke-bundler-group-vendoring.yaml  smoke-bundler-grouped.yaml  smoke-bundler-security-subdep.yaml  smoke-bundler-vendoring.yaml  smoke-bundler-vendoring.yml  smoke-bundler-version-multidir.yaml  smoke-bundler.yaml  smoke-cargo-group-multidir.yaml  smoke-cargo-sparse-index.yaml  smoke-cargo-version-multidir.yaml  smoke-cargo.yaml  smoke-composer.yaml  smoke-devbox.yaml  smoke-devcontainers.yaml  smoke-docker-basic-only-digest-latest.yaml  smoke-docker-basic-only-digest-old.yaml  smoke-docker-basic-tagged-latest.yaml  smoke-docker-basic-tagged-old.yaml  smoke-docker-basic-tagged-plus-diggest-latest.yaml  smoke-docker-basic-tagged-plus-diggest-old.yaml  smoke-docker-helm-with-bom.yaml  smoke-docker-metadata-only-digest-no-image-version.yaml  smoke-docker-metadata-only-digest.yaml  smoke-docker-metadata-tagged.yaml  smoke-docker-version-multidir.yaml  smoke-docker.yaml  smoke-dotnet-sdk-prerelease.yaml  smoke-dotnet-sdk-security.yaml  smoke-dotnet-sdk.yaml  smoke-elm.yaml  smoke-go-close-pr.yaml  smoke-go-gosum-reconciliation.yaml  smoke-go-graph-private-no-creds.yaml  smoke-go-graph-replace-local.yaml  smoke-go-graph-replace-remote.yaml  smoke-go-graph-replace-subproject.yaml  smoke-go-graph.yaml  (+129 more)
uv/: pyproject.toml
yarn/: package.json
yarn-berry/: .pnp.cjs  package.json  yarn.lock.bak
(+88 files in other folders)
