[tool.poetry]
name = "smoke-poetry-ephemeral-graph"
version = "0.1.0"
description = "Smoke test for ephemeral lockfile generation (no committed poetry.lock)"
authors = ["Test <test@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "2.31.0"
flask = "3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
