[tool.poetry]
name = "smoke-poetry-graph"
version = "0.1.0"
description = "Smoke test with direct and transitive dependencies"
authors = ["Test <test@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "2.31.0"
flask = "3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
