[tool.poetry]
name = "devproj"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.10"
toml = "0.10.0"
PyYAML = "^6.0"
numpy = "1.23.0"
requests = {version = "2.28.0", extras = ["socks"]}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

