[package]
name = "dependabot-cargo-sparse-index-smoke"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
axum-extra = "0.10.1"
base64 = "0.22.1"
bollard = "0.19.2"
clap = { version = "4.5.47", features = ["derive"] }
colored = "3.0.0"
dirs = "6.0.0"
env_logger = "0.11.7"
flate2 = "1.1.2"
handlebars = "6.3.2"
home = "0.5.11"
indexmap = "2.11.1"
jsonwebtoken = "9.3.1"
lru = "0.16.0"
opendal = "0.54.0"
petgraph = "0.8.2"
rand = "0.9.2"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
rust-embed = "8.7.2"
rustyline = "16.0.0"
salvo = "0.84.2"
schemars = "1.0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sha2 = "0.10.9"
sysinfo = "0.37.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
toml = "0.8.23"
tower-http = "0.6.6"
url = "2.5.7"
uuid = { version = "1.18.0", features = ["v4"] }
walkdir = "2.5.0"
which = "7.0.3"
zip = "4.3.0"
