[package]
name = "dependabot-cargo-sparse-index-smoke"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
clap = { version = "4.5.47", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.7"
flate2 = "1.1.2"
indexmap = "2.11.1"
rand = "0.9.2"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sha2 = "0.10.9"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
toml = "0.8.23"
url = "2.5.7"
uuid = { version = "1.18.0", features = ["v4"] }
walkdir = "2.5.0"
which = "7.0.3"
zip = "4.3.0"
