[package]
name = "dependabot-cargo-sparse-index-smoke"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "=1.0.102"
clap = { version = "=4.6.1", features = ["derive"] }
dirs = "=6.0.0"
env_logger = "=0.11.10"
flate2 = "=1.1.9"
rand = "=0.9.4"
reqwest = { version = "=0.12.28", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
thiserror = "=2.0.18"
tokio = { version = "=1.52.3", features = ["macros", "rt-multi-thread"] }
toml = "=0.8.23"
uuid = { version = "=1.23.2", features = ["v4"] }
walkdir = "=2.5.0"
zip = "=4.6.1"
# Exact constraints for locked transitive packages keep this sparse-index smoke fixture deterministic.
adler2 = { version = "=2.0.1", default-features = false }
aes = { version = "=0.8.4", default-features = false }
aho-corasick = { version = "=1.1.4", default-features = false }
anstream = { version = "=1.0.0", default-features = false }
anstyle = { version = "=1.0.14", default-features = false }
anstyle-parse = { version = "=1.0.0", default-features = false }
anstyle-query = { version = "=1.1.5", default-features = false }
anstyle-wincon = { version = "=3.0.11", default-features = false }
arbitrary = { version = "=1.4.2", default-features = false }
atomic-waker = { version = "=1.1.2", default-features = false }
base64 = { version = "=0.22.1", default-features = false }
bitflags = { version = "=2.13.0", default-features = false }
block-buffer = { version = "=0.10.4", default-features = false }
bumpalo = { version = "=3.20.3", default-features = false }
bytes = { version = "=1.11.1", default-features = false }
bzip2 = { version = "=0.6.1", default-features = false }
cc = { version = "=1.2.63", default-features = false }
cfg-if = { version = "=1.0.4", default-features = false }
cfg_aliases = { version = "=0.2.1", default-features = false }
cipher = { version = "=0.4.4", default-features = false }
clap_builder = { version = "=4.6.0", default-features = false }
clap_derive = { version = "=4.6.1", default-features = false }
clap_lex = { version = "=1.1.0", default-features = false }
colorchoice = { version = "=1.0.5", default-features = false }
constant_time_eq = { version = "=0.3.1", default-features = false }
cpufeatures = { version = "=0.2.17", default-features = false }
crc32fast = { version = "=1.5.0", default-features = false }
crypto-common = { version = "=0.1.7", default-features = false }
deflate64 = { version = "=0.1.12", default-features = false }
deranged = { version = "=0.5.8", default-features = false }
derive_arbitrary = { version = "=1.4.2", default-features = false }
digest = { version = "=0.10.7", default-features = false }
dirs-sys = { version = "=0.5.0", default-features = false }
displaydoc = { version = "=0.2.6", default-features = false }
env_filter = { version = "=1.0.1", default-features = false }
equivalent = { version = "=1.0.2", default-features = false }
find-msvc-tools = { version = "=0.1.9", default-features = false }
foldhash = { version = "=0.1.5", default-features = false }
form_urlencoded = { version = "=1.2.2", default-features = false }
futures-channel = { version = "=0.3.32", default-features = false }
futures-core = { version = "=0.3.32", default-features = false }
futures-task = { version = "=0.3.32", default-features = false }
futures-util = { version = "=0.3.32", default-features = false }
generic-array = { version = "=0.14.7", default-features = false }
getrandom_0_2_17 = { package = "getrandom", version = "=0.2.17", default-features = false }
getrandom_0_3_4 = { package = "getrandom", version = "=0.3.4", default-features = false }
getrandom_0_4_2 = { package = "getrandom", version = "=0.4.2", default-features = false }
hashbrown_0_15_5 = { package = "hashbrown", version = "=0.15.5", default-features = false }
hashbrown_0_17_1 = { package = "hashbrown", version = "=0.17.1", default-features = false }
heck = { version = "=0.5.0", default-features = false }
hmac = { version = "=0.12.1", default-features = false }
http = { version = "=1.4.2", default-features = false }
http-body = { version = "=1.0.1", default-features = false }
http-body-util = { version = "=0.1.3", default-features = false }
httparse = { version = "=1.10.1", default-features = false }
hyper = { version = "=1.10.1", default-features = false }
hyper-rustls = { version = "=0.27.9", default-features = false }
hyper-util = { version = "=0.1.20", default-features = false }
icu_collections = { version = "=2.2.0", default-features = false }
icu_locale_core = { version = "=2.2.0", default-features = false }
icu_normalizer = { version = "=2.2.0", default-features = false }
icu_normalizer_data = { version = "=2.2.0", default-features = false }
icu_properties = { version = "=2.2.0", default-features = false }
icu_properties_data = { version = "=2.2.0", default-features = false }
icu_provider = { version = "=2.2.0", default-features = false }
id-arena = { version = "=2.3.0", default-features = false }
idna = { version = "=1.1.0", default-features = false }
idna_adapter = { version = "=1.2.2", default-features = false }
indexmap = { version = "=2.14.0", default-features = false }
inout = { version = "=0.1.4", default-features = false }
ipnet = { version = "=2.12.0", default-features = false }
is_terminal_polyfill = { version = "=1.70.2", default-features = false }
itoa = { version = "=1.0.18", default-features = false }
jiff = { version = "=0.2.28", default-features = false }
jiff-static = { version = "=0.2.28", default-features = false }
jobserver = { version = "=0.1.34", default-features = false }
js-sys = { version = "=0.3.100", default-features = false }
leb128fmt = { version = "=0.1.0", default-features = false }
libbz2-rs-sys = { version = "=0.2.5", default-features = false }
libc = { version = "=0.2.186", default-features = false }
liblzma = { version = "=0.4.6", default-features = false }
liblzma-sys = { version = "=0.4.6", default-features = false }
libredox = { version = "=0.1.17", default-features = false }
litemap = { version = "=0.8.2", default-features = false }
log = { version = "=0.4.32", default-features = false }
lru-slab = { version = "=0.1.2", default-features = false }
memchr = { version = "=2.8.1", default-features = false }
miniz_oxide = { version = "=0.8.9", default-features = false }
mio = { version = "=1.2.1", default-features = false }
num-conv = { version = "=0.2.2", default-features = false }
once_cell = { version = "=1.21.4", default-features = false }
once_cell_polyfill = { version = "=1.70.2", default-features = false }
option-ext = { version = "=0.2.0", default-features = false }
pbkdf2 = { version = "=0.12.2", default-features = false }
percent-encoding = { version = "=2.3.2", default-features = false }
pin-project-lite = { version = "=0.2.17", default-features = false }
pkg-config = { version = "=0.3.33", default-features = false }
portable-atomic = { version = "=1.13.1", default-features = false }
portable-atomic-util = { version = "=0.2.7", default-features = false }
potential_utf = { version = "=0.1.5", default-features = false }
powerfmt = { version = "=0.2.0", default-features = false }
ppmd-rust = { version = "=1.4.0", default-features = false }
ppv-lite86 = { version = "=0.2.21", default-features = false }
prettyplease = { version = "=0.2.37", default-features = false }
proc-macro2 = { version = "=1.0.106", default-features = false }
quinn = { version = "=0.11.9", default-features = false }
quinn-proto = { version = "=0.11.14", default-features = false }
quinn-udp = { version = "=0.5.14", default-features = false }
quote = { version = "=1.0.45", default-features = false }
r_efi_5_3_0 = { package = "r-efi", version = "=5.3.0", default-features = false }
r_efi_6_0_0 = { package = "r-efi", version = "=6.0.0", default-features = false }
rand_chacha = { version = "=0.9.0", default-features = false }
rand_core = { version = "=0.9.5", default-features = false }
redox_users = { version = "=0.5.2", default-features = false }
regex = { version = "=1.12.3", default-features = false }
regex-automata = { version = "=0.4.14", default-features = false }
regex-syntax = { version = "=0.8.10", default-features = false }
ring = { version = "=0.17.14", default-features = false }
rustc-hash = { version = "=2.1.2", default-features = false }
rustls = { version = "=0.23.40", default-features = false }
rustls-pki-types = { version = "=1.14.1", default-features = false }
rustls-webpki = { version = "=0.103.13", default-features = false }
rustversion = { version = "=1.0.22", default-features = false }
ryu = { version = "=1.0.23", default-features = false }
same-file = { version = "=1.0.6", default-features = false }
semver = { version = "=1.0.28", default-features = false }
serde_core = { version = "=1.0.228", default-features = false }
serde_derive = { version = "=1.0.228", default-features = false }
serde_spanned = { version = "=0.6.9", default-features = false }
serde_urlencoded = { version = "=0.7.1", default-features = false }
sha1 = { version = "=0.10.6", default-features = false }
shlex = { version = "=2.0.1", default-features = false }
simd-adler32 = { version = "=0.3.9", default-features = false }
slab = { version = "=0.4.12", default-features = false }
smallvec = { version = "=1.15.1", default-features = false }
socket2 = { version = "=0.6.4", default-features = false }
stable_deref_trait = { version = "=1.2.1", default-features = false }
strsim = { version = "=0.11.1", default-features = false }
subtle = { version = "=2.6.1", default-features = false }
syn = { version = "=2.0.117", default-features = false }
sync_wrapper = { version = "=1.0.2", default-features = false }
synstructure = { version = "=0.13.2", default-features = false }
thiserror-impl = { version = "=2.0.18", default-features = false }
time = { version = "=0.3.47", default-features = false }
time-core = { version = "=0.1.8", default-features = false }
tinystr = { version = "=0.8.3", default-features = false }
tinyvec = { version = "=1.11.0", default-features = false }
tinyvec_macros = { version = "=0.1.1", default-features = false }
tokio-macros = { version = "=2.7.0", default-features = false }
tokio-rustls = { version = "=0.26.4", default-features = false }
toml_datetime = { version = "=0.6.11", default-features = false }
toml_edit = { version = "=0.22.27", default-features = false }
toml_write = { version = "=0.1.2", default-features = false }
tower = { version = "=0.5.3", default-features = false }
tower-http = { version = "=0.6.11", default-features = false }
tower-layer = { version = "=0.3.3", default-features = false }
tower-service = { version = "=0.3.3", default-features = false }
tracing = { version = "=0.1.44", default-features = false }
tracing-core = { version = "=0.1.36", default-features = false }
try-lock = { version = "=0.2.5", default-features = false }
typenum = { version = "=1.20.1", default-features = false }
unicode-ident = { version = "=1.0.24", default-features = false }
unicode-xid = { version = "=0.2.6", default-features = false }
untrusted = { version = "=0.9.0", default-features = false }
url = { version = "=2.5.8", default-features = false }
utf8_iter = { version = "=1.0.4", default-features = false }
utf8parse = { version = "=0.2.2", default-features = false }
version_check = { version = "=0.9.5", default-features = false }
want = { version = "=0.3.1", default-features = false }
wasi = { version = "=0.11.1+wasi-snapshot-preview1", default-features = false }
wasip2 = { version = "=1.0.3+wasi-0.2.9", default-features = false }
wasip3 = { version = "=0.4.0+wasi-0.3.0-rc-2026-01-06", default-features = false }
wasm-bindgen = { version = "=0.2.123", default-features = false }
wasm-bindgen-futures = { version = "=0.4.73", default-features = false }
wasm-bindgen-macro = { version = "=0.2.123", default-features = false }
wasm-bindgen-macro-support = { version = "=0.2.123", default-features = false }
wasm-bindgen-shared = { version = "=0.2.123", default-features = false }
wasm-encoder = { version = "=0.244.0", default-features = false }
wasm-metadata = { version = "=0.244.0", default-features = false }
wasmparser = { version = "=0.244.0", default-features = false }
web-sys = { version = "=0.3.100", default-features = false }
web-time = { version = "=1.1.0", default-features = false }
webpki-roots = { version = "=1.0.7", default-features = false }
winapi-util = { version = "=0.1.11", default-features = false }
windows-link = { version = "=0.2.1", default-features = false }
windows_sys_0_52_0 = { package = "windows-sys", version = "=0.52.0", default-features = false }
windows_sys_0_60_2 = { package = "windows-sys", version = "=0.60.2", default-features = false }
windows_sys_0_61_2 = { package = "windows-sys", version = "=0.61.2", default-features = false }
windows_targets_0_52_6 = { package = "windows-targets", version = "=0.52.6", default-features = false }
windows_targets_0_53_5 = { package = "windows-targets", version = "=0.53.5", default-features = false }
windows_aarch64_gnullvm_0_52_6 = { package = "windows_aarch64_gnullvm", version = "=0.52.6", default-features = false }
windows_aarch64_gnullvm_0_53_1 = { package = "windows_aarch64_gnullvm", version = "=0.53.1", default-features = false }
windows_aarch64_msvc_0_52_6 = { package = "windows_aarch64_msvc", version = "=0.52.6", default-features = false }
windows_aarch64_msvc_0_53_1 = { package = "windows_aarch64_msvc", version = "=0.53.1", default-features = false }
windows_i686_gnu_0_52_6 = { package = "windows_i686_gnu", version = "=0.52.6", default-features = false }
windows_i686_gnu_0_53_1 = { package = "windows_i686_gnu", version = "=0.53.1", default-features = false }
windows_i686_gnullvm_0_52_6 = { package = "windows_i686_gnullvm", version = "=0.52.6", default-features = false }
windows_i686_gnullvm_0_53_1 = { package = "windows_i686_gnullvm", version = "=0.53.1", default-features = false }
windows_i686_msvc_0_52_6 = { package = "windows_i686_msvc", version = "=0.52.6", default-features = false }
windows_i686_msvc_0_53_1 = { package = "windows_i686_msvc", version = "=0.53.1", default-features = false }
windows_x86_64_gnu_0_52_6 = { package = "windows_x86_64_gnu", version = "=0.52.6", default-features = false }
windows_x86_64_gnu_0_53_1 = { package = "windows_x86_64_gnu", version = "=0.53.1", default-features = false }
windows_x86_64_gnullvm_0_52_6 = { package = "windows_x86_64_gnullvm", version = "=0.52.6", default-features = false }
windows_x86_64_gnullvm_0_53_1 = { package = "windows_x86_64_gnullvm", version = "=0.53.1", default-features = false }
windows_x86_64_msvc_0_52_6 = { package = "windows_x86_64_msvc", version = "=0.52.6", default-features = false }
windows_x86_64_msvc_0_53_1 = { package = "windows_x86_64_msvc", version = "=0.53.1", default-features = false }
winnow = { version = "=0.7.15", default-features = false }
wit_bindgen_0_51_0 = { package = "wit-bindgen", version = "=0.51.0", default-features = false }
wit_bindgen_0_57_1 = { package = "wit-bindgen", version = "=0.57.1", default-features = false }
wit-bindgen-core = { version = "=0.51.0", default-features = false }
wit-bindgen-rust = { version = "=0.51.0", default-features = false }
wit-bindgen-rust-macro = { version = "=0.51.0", default-features = false }
wit-component = { version = "=0.244.0", default-features = false }
wit-parser = { version = "=0.244.0", default-features = false }
writeable = { version = "=0.6.3", default-features = false }
yoke = { version = "=0.8.3", default-features = false }
yoke-derive = { version = "=0.8.2", default-features = false }
zerocopy = { version = "=0.8.50", default-features = false }
zerocopy-derive = { version = "=0.8.50", default-features = false }
zerofrom = { version = "=0.1.8", default-features = false }
zerofrom-derive = { version = "=0.1.7", default-features = false }
zeroize = { version = "=1.8.2", default-features = false }
zeroize_derive = { version = "=1.4.3", default-features = false }
zerotrie = { version = "=0.2.4", default-features = false }
zerovec = { version = "=0.11.6", default-features = false }
zerovec-derive = { version = "=0.11.3", default-features = false }
zlib-rs = { version = "=0.6.3", default-features = false }
zmij = { version = "=1.0.21", default-features = false }
zopfli = { version = "=0.8.3", default-features = false }
zstd = { version = "=0.13.3", default-features = false }
zstd-safe = { version = "=7.2.4", default-features = false }
zstd-sys = { version = "=2.0.16+zstd.1.5.7", default-features = false }
